012增加了Qconfig的配置

--- a/qjbctemplate.ini
+++ b/qjbctemplate.ini
@@ -4,19 +4,12 @@ port=3306
 dbname=itsdata
 dbuser=root
 dbpwd=
-isPool=false
+isPool=true
 timeout=2
-[TEMPLATE]
-Loglevel=1
 
+[TEMPLATE]
+Loglevel=20.09.012c
+version=
 
 [pool]
 initialPoolSize=4
-
-#设置线程池
-#设置mysql段线重连接
-#设置transment commit
-
-
-
-
