解决了内存存在泄漏的问题

--- a/qjbctemplate.ini
+++ b/qjbctemplate.ini
@@ -9,8 +9,8 @@ timeout=2
 
 [TEMPLATE]
 Loglevel=1
-automemory=ture
-version=20.09.014c
+automemory=true
+version=20.09.016c
 
 [pool]
 initialPoolSize=4
