--- a/qjbctemplate.ini
+++ b/qjbctemplate.ini
@@ -3,14 +3,14 @@ host=127.0.0.1
 port=3306
 dbname=test1
 dbuser=root
-dbpwd=1
+dbpwd=
 isPool=true
 timeout=2
 
 [TEMPLATE]
 Loglevel=0
 automemory=true
-version=20.10.011c
+version=20.10.013c
 
 [pool]
 initialPoolSize=4
